--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Pluggy</title>
+    <title>Clone Test</title>
     <link rel="stylesheet" href="style.css">
-    <script src="loader.js" async></script>
+    <script src="hasgens.js" charset="utf-8"></script>
+    <script src="loader.js" async charset="utf-8"></script>
   </head>
   <body>
   </body>
