--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Clone Test</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="hasgens.js" charset="utf-8"></script>
-    <script src="loader.js" async charset="utf-8"></script>
-  </head>
-  <body>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Clone Test</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="hasgens.js" charset="utf-8"></script>
+  <script src="loader.js" async charset="utf-8"></script>
+</head>
+<body>
+  <div class="splash-container">
+    <div class="splash">
+      <form class="pure-form">
+        <fieldset>
+          <legend>JS-Git Network Test</legend>
+          <div class="pure-g">
+            <input class="pure-u-1 pure-u-md-1-3" type="url" name = "url" placeholder="https:// or git:// url">
+            <button type="submit" class="pure-button pure-button-primary">Test Connection</button>
+          </div>
+        </fieldset>
+        <div class="pure-g">
+          <textarea class="pure-u-1 pure-u-md-1-3" style="height: 300px"></textarea>
+        </div>
+      </form>
+    </div>
+  </div>
+</body>
 </html>
